# shogidrl

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CODEBASE_QUALITY_ASSESSMENT.md  ENHANCED_EVALUATION_FINAL_SUMMARY.md  ENHANCED_EVALUATION_SYSTEM_COMPLETION_REPORT.md  EVALUATION_MANAGER_ARCHITECTURE.md  EVALUATION_REFACTOR_IMPLEMENTATION_PLAN.md  EVALUATION_SYSTEM_ARCHITECTURAL_REVIEW.md  EVALUATION_SYSTEM_COMPLETION_ASSESSMENT.md  HOW_TO_USE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPORT_FIXES_COMPLETION_SUMMARY.md  INTEGRATION_ISSUE_RESOLUTION_PLAN_REVISED.md  INTEGRATION_TEST_REPORT.md  IN_MEMORY_EVALUATION_COMPLETION_REPORT.md  OPS_PLAN.md  PHASE1_COMPLETION_REPORT.md  README.md  REMEDIATION_PLAN.md  TOURNAMENT_STRATEGY_CLEANUP_COMPLETION.md  config.py  debug_bishop.py  debug_black_pieces.py  debug_checkpoint.py  debug_color_name.py  debug_display.py  debug_e2e.py  debug_e2e_direct.py  debug_integration_issues.py  debug_simple.py  debug_test.py  debug_train_import.py  default_config.yaml  demo_enhanced_features.py  elo_bug_analysis.py  evaluate.py  (+34 more)
.claude/: completion-drive-methodology.md
.claude/agents/: algorithm-specialist.md  data-architect.md  devops-engineer.md  infrastructure-architect.md  integration-specialist.md  issue-triage-manager.md  performance-engineer.md  security-architect.md  system-architect.md  technical-writer.md  test-engineer.md  torch-specialist.md  validation-specialist.md
.codacy/: codacy.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  ci.yml.disabled  claude-code-review.yml  claude.yml  release.yml
analytics_output/: analysis_report_20250823_012116.json
archive/: IMPLEMENTATION_PLAN.md-20250518
deprecated/: evaluate_legacy.old  evaluate_legacy.py  test_evaluation_display_integration_simple.py.old  test_integration_validation.py  train_legacy.old  train_legacy.py
deprecated/obsolete_docs/: AGENT_RECONSTRUCTION_FINAL_STATUS.md  BACKWARD_COMPATIBILITY_REMOVAL_COMPLETION_REPORT.md  EVALUATION_REFACTOR_FINAL_COMPLETION_REPORT.md  EVALUATION_SYSTEM_PLAN.md  HOW_TO_USE.md  MLCORE_IMPLEMENTATION_PLAN.md  PARALLEL_SYSTEM_REMEDIATION_PLAN.md  PRIORITY_2_DISPLAY_INTEGRATION_COMPLETION_REPORT.md  PROJECT_STATUS_UPDATE_JAN2025.md  TEST_REMEDIATION_PLAN.md  TRAINING_REFACTOR.md  TRAINING_REMEDIATION_PLAN.md  ppo_agent_test_completion_plan.md  task_3_2_model_injection_implementation_plan.md
deprecated/training/: train.py.old  trainer.py.old
docs/: 2. CODE_MAP.md  CI_CD.md  CODE_MAP.md  CONFIG_REMEDIATION_PLAN.md  CRITICAL_BUGS_REMEDIATION_PLAN.md  DESIGN.md  DISPLAY_FIXES.md  EVALUATION_AUDIT.md  EVALUATION_REFACTOR_QUICK_REFERENCE.md  EVALUATION_REFACTOR_QUICK_REFERENCE_UPDATED.md  EVALUATION_SYSTEM_PLAN.md  EVALUATION_SYSTEM_REFACTOR_STATUS_REPORT.md  FEEDBACK_IMPLEMENTATION_PLAN.md  GETTING_STARTED_EVALUATION_COMPLETION.md  MLCORE_IMPLEMENTATION_PLAN.md  MLCORE_REVIEW.md  ML_REMEDIATION_PLAN.md  PARALLEL_EVALUATION_BUSINESS_CASE.md  PHASE1_REFACTORING_COMPLETE.md  PROJECT_STATUS_UPDATE_JAN2025.md  RESIDUAL_ISSUES_REMEDIATION_PLAN.md  SHOGI_GAME_REFACTORING_PLAN.md  TEST_AUDIT.md  TEST_MOVE.md  TEST_REMEDIATION_PLAN.md  TRAINER_REFACTOR.md  TRAINER_STATUS_REPORT.md  TRAINING_LOOP_DECOMPOSITION_PROPOSAL.md  TRAINING_REFACTOR.md  TUI_ENHANCEMENT_PLAN.md  outstanding_fixes.md  shogi_engine.py.backup  tui_enhancement_plan.md
docs/architecture/: twitch_showcase_system_design.md
docs/archive/: INTEGRATION_ISSUE_RESOLUTION_PLAN.md
docs/code_audit/: README.md  code_audit_prompt.md
docs/completion_drive_plans/: api_design_plan.md  frontend_architecture_plan.md  integration_plan.md  integration_testing_plan.md  performance_plan.md  security_architecture_plan.md  twitch_frontend_ux.md  twitch_integration_plan.md  twitch_showcase_architecture.md  twitch_showcase_synthesis.md  unified_architecture_blueprint.md
docs/component_audit/: config_schema.md  constants.md  core_base_actor_critic.md  core_neural_network.md  core_ppo_agent.md  core_scheduler_factory.md  evaluation_elo_registry.md  evaluation_evaluate.md  evaluation_init.md  keisei___init__.md  keisei_config_schema.md  keisei_constants.md  keisei_core___init__.md  keisei_core_actor_critic_protocol.md  keisei_core_base_actor_critic.md  keisei_core_experience_buffer.md  keisei_core_neural_network.md  keisei_core_ppo_agent.md  keisei_core_scheduler_factory.md  keisei_init.md  (+72 more)
examples/: enhanced_display_config.yaml  parallel_training_example.py
humantools/: code_mapper.py  keisei_dump.xml  test_dump.xml  trainer_core.xml  trainer_dump.xml
keisei/: __init__.py  config.py  config_schema.py  constants.py  evaluate.py  evaluate_legacy.py  experience_buffer.py  move_formatting.py  neural_network.py  ppo_agent.py  shogi_engine.py  shogi_game.py  shogi_move_execution.py  shogi_rules_logic.py  train.py  train_legacy.py  trainer.py  utils.py
scripts/: dev_profile.py  profile_training.py  run_local_ci.sh  sync_audit_docs.py
tests/: REVISED_TEST_PLAN.md  TEST_REMEDIATION_PLAN.md  UPDATED_TEST_REMEDIATION_PLAN.md  __init__.py  conftest.py  mock_utilities.py  test_actor_critic_refactoring.py  test_checkpoint.py  test_configuration_integration.py  test_dependencies.py  test_display_components.py  test_display_infrastructure.py  test_enhanced_evaluation_features.py  test_env_manager.py  test_evaluate.py  test_evaluate.py.backup  test_experience_buffer.py  test_features.py  test_integration_smoke.py  test_legal_mask_generation.py  test_logger.py  test_make_undo_move.py  test_metrics_manager.py  test_model_manager.py  test_model_manager_checkpoint_and_artifacts.py  test_model_manager_init.py  test_model_save_load.py  test_move_formatting.py  test_neural_network.py  test_observation_constants.py  test_parallel_smoke.py  test_ppo_agent.py  test_ppo_agent_core.py  test_ppo_agent_edge_cases.py  test_ppo_agent_enhancements.py  test_ppo_agent_learning.py  test_profiling.py  test_remediation_integration.py  test_resnet_tower.py  test_reward_with_flipped_perspective.py  (+31 more)
(+440 files in other folders)
