[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keisei"
version = "0.1.0"
description = "DRL Shogi Client: Deep Reinforcement Learning for Shogi using PPO"
authors = [
    { name = "John Morrissey", email = "john@foundryside.dev" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "wandb>=0.17.0", # wandb will pull in its own dependencies like GitPython, pydantic, sentry-sdk, setproctitle
    "pydantic>=2.11.0,<3.0", # Explicitly add Pydantic as it's used in config_schema.py
    "rich>=13.0.0", # Used directly in training/display.py, display_manager.py, and utils/utils.py
    "PyYAML>=6.0" # Moved from dev dependencies since it's used in utils/utils.py
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-pylint>=0.21.0",
    
    # Code formatting and linting
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    
    # Type checking
    "mypy>=1.9.0",
    "types-PyYAML>=6.0.0", # Added for mypy to understand PyYAML types
    
    # Development tools
    "deptry>=0.12.0", # Dependency analysis tool
]

# Specifies that the 'keisei' package is found directly in the project root
# (i.e., where pyproject.toml is located).
[tool.setuptools]
packages = ["keisei"]

# If you prefer using find (e.g., if you add more packages later at the root):
# [tool.setuptools.packages.find]
# where = ["."]  # Look in the current directory (project root)
# include = ["keisei*"] # Include the keisei package (and any future keisei_extra packages)
# exclude = ["tests*"] # Exclude the tests directory from being treated as a package to install

[pytest]
addopts = "--pylint"

[tool.pylint.messages_control]
disable = "redefined-outer-name"

[tool.mypy]
check_untyped_defs = true
mypy_path = "." # Look for modules/stubs starting in the project root
packages = ["keisei", "tests"]
exclude = ["env", "venv", ".venv"] # Added common venv names
plugins = "pydantic.mypy" # Enable Pydantic plugin

# Per-module overrides:
[[tool.mypy.overrides]]
module = "dotenv"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wandb.*" # For wandb and its submodules
ignore_missing_imports = true

[tool.flake8]
exclude = [
    ".git",
    "__pycache__",
    "env",
    "venv",
    ".venv", # Added common venv name
    ".tox",
    ".eggs",
    "*.egg-info"
]
max-line-length = 120
extend-ignore = "E203" # Compatible with Black

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["keisei"]
multi_line_output = 3
include_trailing_comma = true